--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
     rel="stylesheet"
   />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100..900;1,100..900&display=swap">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
